--- a/fs-commerce-library/package.json
+++ b/fs-commerce-library/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "process": "^0.11.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "react-to-webcomponent": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
